--- a/毕业设计/本科毕业设计/模拟数据（6节点）生成算法.md
+++ b/毕业设计/本科毕业设计/模拟数据（6节点）生成算法.md
@@ -32,20 +32,83 @@ $$
 
 ---
 
-[调控微分方程组] 以下为模拟的6各基因节点（3个DNB节点+3个非DNB节点）的调控方程的形式：
+[调控微分方程组] 以下为模拟的6个基因节点（3个DNB节点+3个非DNB节点）的调控方程的形式：
 $$
-\frac{dg_{i}(t)}{dt}=促进项+抑制项-降解项+噪声项 \varsigma_{i}(t)
+\frac{dg_{i}(t)}{dt}=促进项+抑制项-降解项+噪声项 \varsigma_{i}(t)=f[g(t);s],g(t_{0})=g_{0}
+$$
+上述方程表示各基因节点对应的mRNA浓度变化速率，以Euler方法离散化得到形式：
+$$
+g_{i}(k+1)=g_{i}(k)+f[g(k);s]\Delta t
+$$
+其中，$g(k)$为状态变量，$f[g(t);s]$为非线性项，该方程所描述的是某段采样时间$(t,t+1]$内的累积，即$\mathrm{d}g_{i}=g_{i}(k+1)-g_{i}(k),g_{i}(k)=g_{i}(t+k\Delta t)$. 当达到平衡状态$\overline{g}$时，有$f[\overline{g};s]=0,\frac{\mathrm{d}g_{i}(t)}{\mathrm{d}t}=0$. 
+令$x_{i}(t)=g_{i}(t)-\overline{g}$，即将平衡状态移到原点，方程变为：
+$$
+x_{i}(k+1)=x_{i}(k)+f[x(k);s]\Delta t
+$$
+对非线性项$f[x(k)+\overline{g};s]$进行泰勒展开，保留一阶形式：
+$$
+f[x(k)+\overline{g};s] \approx f(\overline{g};s)+\left. \frac{\partial f}{\partial g} \right|_{g=\overline{g}}x(k)
+$$
+于是，方程变为：
+$$
+x_{i}(k+1)=x_{i}(k)+\left. \frac{\partial f}{\partial g} \right|_{g=\overline{g}}x(k)\Delta t
+$$
+有雅各比矩阵$J=\left. \frac{\partial f[g(k);s]}{\partial g} \right|_{g=\overline{g}}=e^{\Delta t\cdot A},\Delta t=0.01$，则
+$$
+x(k+1)=J \cdot x(k)(精确解) 
+$$
+存在可逆矩阵$P$，有$P^{-1}JP=\Lambda=diag(\lambda_{1},\lambda_{2},...,\lambda_{n})$
+简化方程形式，将$g(k)$转换为$y(k)$，即$g(k) \rightarrow x(k) \rightarrow y(k)$，$x(k)=Py(k)$，则$y(k)=P^{-1}x(k)$，使得
+$$
+y(k+1)=\Lambda y(k)+\varsigma(k),
+g-\overline{g}=Py
+$$
+据此可以计算$y$的方差：
+$$
+\begin{equation}
+\begin{aligned}
+& Var(y_{i})=Var[y_{i}(k+1)]=E[y_{i}^{2}(k+1)]=E[(\lambda_{i}y_{i}(k)+\varsigma(k))^{2}]=\lambda_{i}^{2}E[y_{i}^{2}(k)]+E[\varsigma_{i}^{2}(k)]\\
+& =\lambda_{i}^{2}Var[y_{i}(k)]+Var[\varsigma_{i}(k)]=\lambda_{i}^{2}Var(y_{i})+\kappa_{ii}
+\end{aligned}
+\end{equation}
+$$
+即$Var(y_{i})=\lambda_{i}^{2}Var(y_{i})+\kappa_{ii},\kappa_{ij}=Cov(\varsigma_{i}(k),\varsigma_{j}(k))$，解得$Var(y_{i})=\frac{\kappa_{ii}}{1-\lambda_{i}^{2}}$
+据此可以计算$y_{i}$和$y_{j}$的协方差与相关系数：
+$$
+\begin{equation}
+\begin{aligned}
+& Cov(y_{i},y_{j})=Cov[y_{i}(k+1),y_{j}(k+1)]=E[y_{i}(k+1)y_{j}(k+1)]=E[(\lambda_{i}y_{i}(k)+\varsigma_{i}(k))(\lambda_{j}y_{j}(k)+\varsigma_{j}(k))]\\
+& =\lambda_{i}\lambda_{j}E(y_{i}y_{j})+\kappa_{ij}=\lambda_{i}\lambda_{j}Cov(y_{i},y_{j})+\kappa_{ij}
+\end{aligned}
+\end{equation}
+$$
+$$
+\begin{equation}
+\begin{aligned}
+PCC(y_{i},y_{j})=\frac{Cov(y_{i},y_{j})}{\sqrt{Var(y_{i})Var(y_{j})}}
+\end{aligned}
+\end{equation}
+$$
+即$Cov(y_{i},y_{j})=\lambda_{i}\lambda_{j}Cov(y_{i},y_{j})+\kappa_{ij}$，解得$Cov(y_{i},y_{j})=\frac{\kappa_{ij}}{1-\lambda_{i}\lambda_{j}},PCC(y_{i},y_{j})=\frac{\kappa_{ij}}{\kappa_{ii}\kappa_{jj}}\frac{\sqrt{(1-\lambda_{i}^{2})(1-\lambda_{j}^{2})}}{1-\lambda_{i}\lambda_{j}}$
+由此可推得$g$的一些性质，$g=Sy+\overline{g}$：
+$$
+Var(g_{i})=Var(s_{i1}y_{1}+s_{i2}y_{2}+\dots+s_{in}y_{n}+\overline{g})=\sum_{k}^{n}s_{ik}^{2}Var(y_{k})+\sum_{k,m=1,k\neq m}^{n}s_{ik}s_{im}Cov(y_{i},y_{j})
+$$
+$$
+Cov(g_{i},g_{j})=E[(s_{i1}y_{1}+s_{i2}y_{2}+\dots+s_{in}y_{n})(s_{j1}y_{1}+s_{j2}y_{2}+\dots+s_{jn}y_{n})]=\sum_{k=1}^{n}s_{ik}s_{jk}Var(y_{k})+\sum_{k,m=1,k\neq m}^{n}s_{ik}s_{im}Cov(y_{i},y_{j})
+$$
+$$
+PCC(g_{i},g_{j})=\frac{Cov(g_{i},g_{j})}{\sqrt{Var(g_{i})Var(g_{j})}}
 $$
 假设促进项与抑制项中的米氏常数$K_{i}=1$，噪声项$\varsigma_{i}(t)\sim{N(0,\sigma^{2})},k_{ij}=Cov(\varsigma_{i}(t),\varsigma_{j}(t))$，在本案例中设定随机噪声为均值为0，方差为1的高斯噪声，调控微分方程组如下：
 $$
 \left\{
 \begin{array}{**lr**}
-\frac{dg_{1}(t)}{dt}=\frac{5-2\left|s\right|}{5}\frac{g_{2}(t)}{1+g_{2}(t)}+\frac{5-2\left|s\right|}{5}\frac{g_{3}(t)}{1+g_{3}(t)}-\frac{\left|s\right|}{5}g_{1}(t)+\varsigma_{1}(t), & \\
-\frac{dg_{2}(t)}{dt}=\frac{1-\left|s\right|}{5}\frac{g_{1}(t)}{1+g_{1}(t)}+\frac{1-\left|s\right|}{5}\frac{g_{3}(t)}{1+g_{3}(t)}-\frac{1+\left|s\right|}{5}g_{2}(t)+\varsigma_{2}(t), & \\
-\frac{dg_{3}(t)}{dt}=\frac{2\left|s\right|-3}{5}+\frac{1-\left|s\right|}{5}\frac{1}{1+g_{1}(t)}+\frac{2-\left|s\right|}{5}\frac{1}{1+g_{2}(t)}-\frac{4-\left|s\right|}{5}g_{3}(t)+\varsigma_{3}(t), & \\
-\frac{dg_{4}(t)}{dt}=-\frac{4}{5}+\frac{1}{10}\frac{1}{1+g_{2}(t)}+\frac{1}{10}\frac{1}{1+g_{3}(t)}+\frac{3}{10}\frac{g_{5}(t)}{1+g_{5}(t)}+\frac{3}{10}\frac{1}{1+g_{6}(t)}-\frac{3}{2}g_{4}(t)+\varsigma_{4}(t), & \\
-\frac{dg_{5}(t)}{dt}=\frac{3}{10}\frac{g_{6}}{1+g_{6}(t)}-2g_{5}(t)+\varsigma_{5}(t), & \\
-\frac{dg_{6}(t)}{dt}=\frac{3}{10}\frac{g_{5}(t)}{1+g_{5}(t)}-2g_{6}(t)+\varsigma_{6}(t). & \\
+\frac{dg_{1}(t)}{dt}=(-10\left|s\right|-60)+(40\left|s\right|-120)\frac{g_{3}(t)}{1+g_{3}(t)}+240\frac{g_{4}(t)}{1+g_{4}(t)}-10\left|s\right|g_{1}(t), & \\
+\frac{dg_{2}(t)}{dt}=(150-40\left|s\right|)+(40\left|s\right|-120)\frac{g_{1}(t)}{1+g_{1}(t)}+(40\left|s\right|-120))\frac{1}{1+g_{3}(t)}-30g_{2}(t), & \\
+\frac{dg_{3}(t)}{dt}=-30+120\frac{g_{4}(t)}{1+g_{4}(t)}-30g_{3}(t), & \\
+\frac{dg_{4}(t)}{dt}=-40+200\frac{g_{5}(t)}{1+g_{5}(t)}-60g_{4}(t), & \\
+\frac{dg_{5}(t)}{dt}=80\frac{1}{1+g_{1}(t)}+80\frac{1}{1+g_{2}(t)}+240\frac{1}{1+g_{5}(t)}-200g_{5}(t)
 \end{array}
 \right.
 $$
@@ -53,138 +116,50 @@ $$
 $$
 \left\{
 \begin{array}{**lr**}
-g_{1}(k+1)=g_{1}(k)+[\frac{5-2\left|s\right|}{5}\frac{g_{2}(t)}{1+g_{2}(t)}+\frac{5-2\left|s\right|}{5}\frac{g_{3}(t)}{1+g_{3}(t)}-\frac{\left|s\right|}{5}g_{1}(t)+\varsigma_{1}(t)]\Delta t, & \\
-g_{2}(k+1)=g_{2}(k)+[\frac{1-\left|s\right|}{5}\frac{g_{1}(t)}{1+g_{1}(t)}+\frac{1-\left|s\right|}{5}\frac{g_{3}(t)}{1+g_{3}(t)}-\frac{1+\left|s\right|}{5}g_{2}(t)+\varsigma_{2}(t)]\Delta t, & \\
-g_{3}(k+1)=g_{3}(k)+[\frac{2\left|s\right|-3}{5}+\frac{1-\left|s\right|}{5}\frac{1}{1+g_{1}(t)}+\frac{2-\left|s\right|}{5}\frac{1}{1+g_{3}(t)}-\frac{4-\left|s\right|}{5}g_{3}(t)+\varsigma_{3}(t)]\Delta t, & \\
-g_{4}(k+1)=g_{4}(k)+[-\frac{1}{2}+\frac{1}{10}\frac{1}{1+g_{2}(t)}+\frac{1}{10}\frac{1}{1+g_{3}(t)}+\frac{3}{10}\frac{g_{5}(t)}{1+g_{5}(t)}+\frac{3}{10}\frac{1}{1+g_{6}(t)}-\frac{3}{2}g_{4}(t)+\varsigma_{4}(t)]\Delta t, & \\
-g_{5}(k+1)=g_{5}(k)+[\frac{3}{10}\frac{g_{6}}{1+g_{6}(t)}-2g_{5}(t)+\varsigma_{5}(t)]\Delta t, & \\
-g_{6}(k+1)=g_{6}(k)+[\frac{3}{10}\frac{g_{5}(t)}{1+g_{5}(t)}-2g_{6}(t)+\varsigma_{6}(t)]\Delta t. & \\
+g_{1}(k+1)=g_{1}(k)+[(-10\left|s\right|-60)+(40\left|s\right|-120)\frac{g_{3}(t)}{1+g_{3}(t)}+240\frac{g_{4}(t)}{1+g_{4}(t)}-10\left|s\right|g_{1}(t)]\Delta t, & \\
+g_{2}(k+1)=g_{2}(k)+[(150-40\left|s\right|)+(40\left|s\right|-120)\frac{g_{1}(t)}{1+g_{1}(t)}+(40\left|s\right|-120))\frac{1}{1+g_{3}(t)}-30g_{2}(t)]\Delta t, & \\
+g_{3}(k+1)=g_{3}(k)+[-30+120\frac{g_{4}(t)}{1+g_{4}(t)}-30g_{3}(t)]\Delta t, & \\
+g_{4}(k+1)=g_{4}(k)+[-40+200\frac{g_{5}(t)}{1+g_{5}(t)}-60g_{4}(t)]\Delta t, & \\
+g_{5}(k+1)=g_{5}(k)+[80\frac{1}{1+g_{1}(t)}+80\frac{1}{1+g_{2}(t)}+240\frac{1}{1+g_{5}(t)}-200g_{5}(t)]\Delta t.
 \end{array}
 \right.
 $$
-平衡状态浓度$\overline{\textbf{g}}=\{g_{1},g_{2},g_{3},g_{4},g_{5},g_{6}\}=\{0,0,0,0,0,0\}$，各节点衰减率为$DR=\{\frac{1\left|s\right|}{5},\frac{1+\left|s\right|}{5},\frac{4-\left|s\right|}{5},\frac{3}{2},2,2\}$，有雅各比矩阵：$J_{ij}=\left. \frac{\partial f_{i}}{\partial g_{j}} \right|_{\textbf{g}=\overline{\textbf{g}}}$，具体矩阵如下：
+平衡状态浓度$\overline{\textbf{g}}=\{g_{1},g_{2},g_{3},g_{4},g_{5},g_{6}\}=\{1,1,1,1,1,1\}$，各节点衰减率为$DR=(10\left|s\right|,30,30,60,200\}$，有雅各比矩阵：$J=\left. \frac{\partial f}{\partial g} \right|_{g=\overline{g}}=e^{\Delta t \cdot A}$，具体矩阵如下：
 $$
 \begin{equation}
-\begin{bmatrix}
-J_{11} & J_{12} & J_{13} & J_{14} & J_{15} & J_{16} \\
-J_{21} & J_{22} & J_{23} & J_{24} & J_{25} & J_{26} \\
-J_{31} & J_{32} & J_{33} & J_{34} & J_{35} & J_{36} \\
-J_{41} & J_{42} & J_{43} & J_{44} & J_{45} & J_{46} \\
-J_{51} & J_{52} & J_{53} & J_{54} & J_{55} & J_{56} \\
-J_{61} & J_{62} & J_{63} & J_{64} & J_{65} & J_{66} \\
-\end{bmatrix}
+A
 =
 \begin{bmatrix}
-\frac{\partial f_{1}}{\partial g_{1}} & \frac{\partial f_{1}}{\partial g_{2}} & \frac{\partial f_{1}}{\partial g_{3}} & \frac{\partial f_{1}}{\partial g_{4}} & \frac{\partial f_{1}}{\partial g_{5}} & \frac{\partial f_{1}}{\partial g_{6}} \\
-\frac{\partial f_{2}}{\partial g_{1}} & \frac{\partial f_{2}}{\partial g_{2}} & \frac{\partial f_{2}}{\partial g_{3}} & \frac{\partial f_{2}}{\partial g_{4}} & \frac{\partial f_{2}}{\partial g_{5}} & \frac{\partial f_{2}}{\partial g_{6}} \\
-\frac{\partial f_{3}}{\partial g_{1}} & \frac{\partial f_{3}}{\partial g_{2}} & \frac{\partial f_{3}}{\partial g_{3}} & \frac{\partial f_{3}}{\partial g_{4}} & \frac{\partial f_{3}}{\partial g_{5}} & \frac{\partial f_{3}}{\partial g_{6}} \\
-\frac{\partial f_{4}}{\partial g_{1}} & \frac{\partial f_{4}}{\partial g_{2}} & \frac{\partial f_{4}}{\partial g_{3}} & \frac{\partial f_{4}}{\partial g_{4}} & \frac{\partial f_{4}}{\partial g_{5}} & \frac{\partial f_{4}}{\partial g_{6}} \\
-\frac{\partial f_{5}}{\partial g_{1}} & \frac{\partial f_{5}}{\partial g_{2}} & \frac{\partial f_{5}}{\partial g_{3}} & \frac{\partial f_{5}}{\partial g_{4}} & \frac{\partial f_{5}}{\partial g_{5}} & \frac{\partial f_{5}}{\partial g_{6}} \\
-\frac{\partial f_{6}}{\partial g_{1}} & \frac{\partial f_{6}}{\partial g_{2}} & \frac{\partial f_{6}}{\partial g_{3}} & \frac{\partial f_{6}}{\partial g_{4}} & \frac{\partial f_{6}}{\partial g_{5}} & \frac{\partial f_{6}}{\partial g_{6}} \\
-\end{bmatrix}
-=
-\begin{bmatrix}
--\frac{\left|s\right|}{5} & \frac{5-2\left|s\right|}{5}\frac{1}{(1+g_{2})^{2}} & \frac{5-2\left|s\right|}{5}\frac{1}{(1+g_{3})^{2}} & 0 & 0 & 0 \\
-\frac{1-\left|s\right|}{5}\frac{1}{(1+g_{1})^{2}} & -\frac{1+\left|s\right|}{5} & \frac{1-\left|s\right|}{5}\frac{1}{(1+g_{3})^{2}} & 0 & 0 & 0 \\
--\frac{1-\left|s\right|}{5}\frac{1}{(1+g_{1})^{2}} & -\frac{2-\left|s\right|}{5}\frac{1}{(1+g_{2})^{2}} & -\frac{4-\left|s\right|}{5} & 0 & 0 & 0 \\
-0 & -\frac{1}{10}\frac{1}{(1+g_{2})^{2}} & -\frac{1}{10}\frac{1}{(1+g_{3})^{2}} & -\frac{3}{2} & \frac{3}{10}\frac{1}{(1+g_{5})^{2}} & -\frac{3}{10}\frac{1}{(1+g_{6})^{2}}\\
-0 & 0 & 0 & 0 & -2 & \frac{3}{10}\frac{1}{(1+g_{6})^{2}} \\
-0 & 0 & 0 & 0 & \frac{3}{10}\frac{1}{(1+g_{5})^{2}} & -2 
+-10\left|s\right| & 0 & 10\left|s\right|-30 & 60 & 0\\
+10\left|s\right|-30 & -30 & 30-10\left|s\right| & 0 & 0\\
+0 & 0 & -30 & 60 & 0\\
+0 & 0 & 0 & -60 & 100\\
+-20 & -20 & 0 & -60 & -200
 \end{bmatrix}
 \end{equation}
 $$
-将$\overline{\textbf{g}}=\{g_{1},g_{2},g_{3},g_{4},g_{5},g_{6}\}=\{0,0,0,0,0,0\}$代入，得：
+取$\Delta t =0.01$，得到矩阵$J$的5个不同特征值$(0.905^{\left|s\right|},0.741,0.643,0.333,0.257)$，进一步求得可逆矩阵
 $$
 \begin{equation}
+S=
 \begin{bmatrix}
--\frac{\left|s\right|}{5} & \frac{5-2\left|s\right|}{5} & \frac{5-2\left|s\right|}{5} & 0 & 0 & 0 \\
-\frac{1-\left|s\right|}{5} & -\frac{1+\left|s\right|}{5} & \frac{1-\left|s\right|}{5} & 0 & 0 & 0 \\
--\frac{1-\left|s\right|}{5} & -\frac{2-\left|s\right|}{5} & -\frac{4-\left|s\right|}{5} & 0 & 0 & 0 \\
-0 & -\frac{1}{10} & -\frac{1}{10} & -\frac{3}{2} & \frac{3}{10} & -\frac{3}{10} \\
-0 & 0 & 0 & 0 & -2 & \frac{3}{10} \\
-0 & 0 & 0 & 0 & \frac{3}{10} & -2
+-1 & 1 & -3\sqrt{21}-13 & \frac{3}{2} & 3\sqrt{21}-13\\
+1 & -1 & 0 & 0 & 0\\
+0 & 1 & -3\sqrt{21}-13 & \frac{3}{2} & 3\sqrt{21}-13\\
+0 & 0 & \frac{5\sqrt{21}+15}{6} & -2 & \frac{-5\sqrt{21}+15}{6}\\
+0 & 0 & 1 & 1 & 1
 \end{bmatrix}
 \end{equation}
 $$
-令$\left|s\right|=0$，则矩阵为：
+使得$S^{-1}JS=\Lambda=diag(0.905^{\left|s\right|},0.741,0.643,0.333,0.257)$，于是有$y(k+1)=\Lambda y(k)+\varsigma(k)$，如下：
 $$
-\begin{equation}
-\begin{bmatrix}
-0 & 1 & 1 & 0 & 0 & 0 \\
-\frac{1}{5} & -\frac{1}{5} & \frac{1}{5} & 0 & 0 & 0\\
--\frac{1}{5} & -\frac{2}{5} & \frac{4}{5} & 0 & 0 & 0 \\
-0 & -\frac{1}{10} & -\frac{1}{10} & -\frac{3}{2} & \frac{3}{10} & -\frac{3}{10} \\
-0 & 0 & 0 & 0 & -2 & \frac{3}{10} \\
-0 & 0 & 0 & 0 & \frac{3}{10} & -2
-\end{bmatrix}
-\end{equation}
+\left\{
+\begin{array}{**lr**}
+y_{1}(k+1)=0.905^{\left|s\right|}y_{1}(k)+\varsigma_{1}(k), & \\
+y_{2}(k+1)=0.741y_{2}(k)+\varsigma_{2}(k), & \\
+y_{3}(k+1)=0.643y_{3}(k)+\varsigma_{3}(k), & \\
+y_{4}(k+1)=0.333y_{4}(k)+\varsigma_{4}(k), & \\
+y_{5}(k+1)=0.257y_{5}(k)+\varsigma_{5}(k).
+\end{array}
+\right.
 $$
-根据$\left| \lambda E-A \right|=0$，解得当$\left|s\right|=0$时，矩阵的特征值为$(-2.30,-1.70,-1.50,-0.60,-0.40,-1.11\times10^{-16}\rightarrow 0)$
-
----
-
-[算法] 设置初始浓度为$\textbf{g}(0)=(g_{1}(0),g_{2}(0),g_{3}(0),g_{4}(0),g_{5}(0),g_{6}(0))=(1,1,1,1,1,1)$，$s\in(-0.5,0.5)$
-```python
-import numpy as np
-import pandas as pd
-‘’‘system of ordinary differential equations for 6-Nodes gene regulatory Networks
-’‘’
-# 初始化基因浓度
-n_genes = 6
-initial_concetration = np.ones(n_genes)
-
-# 生成参数s
-s_norm = np.linspace(-1, 0.5, 500, endpoint = False)
-s_case = np.linspace(-0.5, 0.5, 11)
-s_case_ = np.insert(s_case, 5, -0.00001)
-s = np.concatenate([s_norm, s_case_])
-
-def simulate_gene_network(initial_concentration, s_array, output_path):
-
-	'''基因网络模拟函数
-	参数：
-	initial_concentration: 初始浓度
-    s_values: 参数s值
-    output_path: 输出CSV文件路径
-	'''
-	n_genes = len(initial_concentration)
-
-	simulation_data = []
-	g = initial_concentration.copy()
-	simulation_data.append(g)
-
-	for s in s_array:
-		new_g = np.zeros(n_genes)
-		# Gene 1
-		new_g[0] = g[0] + ((5-2*np.abs(s))/5)*(g[1]/(1+g[1])) + ((5-
-		2*np.abs(s))/5)*(g[2]/(1+g[2])) - (np.abs(s)/5)*g[0] + 
-		np.random.norm(0, 0.2*g[0])
-		# Gene 2
-		new_g[1] = g[1] + ((5-np.abs(s))/5)*(g[0]/(1+g[0])) + ((5-
-		np.abs(s))/5)*(g[2]/(1+g[2])) - ((1+np.abs(s))/5)*g[1] + 
-		np.random.norm(0, 0.2*g[1])
-		# Gene 3
-		new_g[2] = g[2] + (2*np.abs(s)-3)/5 + ((1-np.abs(s))/5)*(1/(1+g[0]))
-		 + ((2-np.abs(s))/5)*(1/(1+g[1])) - ((4-np.abs(s))/5)*g[2] + 
-		np.random.norm(0, 0.2*g[2])
-		# Gene 4
-		new_g[3] = g[3] - 1/2 + (1/10)*(1/(1+g[1])) + (1/10)*(1/(1+g[2])) + 
-		(3/10)*(g[4]/(1+g[4])) + (3/10)*(1/(1+g[5])) - (3/2)*g[3] + 
-		np.random.norm(0, 0.2*g[3])
-		# Gene 5
-		new_g[4] = g[4] + (3/10)*(g[5]/(1+g[5])) - 2*g[4] + np.random.norm(0,
-		 0.2*g[4])
-		# Gene 6
-		new_g[5] = g[5] + 3/10)*(g[4]/(1+g[4])) - 2*g[5] + np.random.norm(0,
-		 0.2*g[5])
-
-		g = new_g.copy()
-		simulation_data.append(g)
-
-	df = pd.DataFrame(
-			np.array(simulation_data).T,
-	        index=[f'g{i+1}' for i in range(n_genes)],
-	        columns=[f's{j}' for j in range(513)]
-	) 
-	df.to_csv(output_path, float_format='%.6f')
-```
